fix(profile): widths are now human readable

--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -5,7 +5,7 @@
   object-fit: cover;
 }
 
-@media screen and (max-width: 786px) {
+@media screen and (max-width: 768px) {
   .profile__image {
     margin: 0;
     margin-bottom: 30px;
