--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,4 +1,5 @@
 .profile__info {
+  width: 100%;
   display: flex;
   gap: 18px;
   flex-wrap: wrap;
