--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,5 +1,5 @@
 .profile__name {
-  max-width: 534px;
+  max-width: calc(100% - 24px - 18px); /* 100% - edit-button - margin */
   margin: 0;
   font-weight: 500;
   font-size: 42px;
@@ -9,21 +9,9 @@
   overflow: hidden;
 }
 
-@media screen and (max-width: 1380px) {
-  .profile__name {
-    max-width: calc(68.75vw - 410px);
-  }
-}
-
-@media screen and (max-width: 1080px) {
-  .profile__name {
-    max-width: calc(68.75vw - 190px);
-  }
-}
-
 @media screen and (max-width: 768px) {
   .profile__name {
-    max-width: calc(80vw - 40px);
+    max-width: calc(100% - 18px - 18px);
     font-size: 36px;
     line-height: 38px;
   }
@@ -31,7 +19,6 @@
 
 @media screen and (max-width: 476px) {
   .profile__name {
-    max-width: calc(100vw - 80px);
     text-align: center;
     font-size: 22px;
     line-height: 26.63px;
