--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,12 +2,12 @@
   width: 100%;
   display: grid;
   align-items: center;
-  grid-template-columns: auto 1fr auto;
+  grid-template-columns: auto calc(100% - 144px - 150px - 18px) auto; /* 100% - image - add-button - gap */
 }
 
 @media screen and (max-width: 1080px) {
   .profile {
-    grid-template-columns: auto 1fr;
+    grid-template-columns: auto calc(100% - 144px);
     grid-template-rows: auto auto;
     row-gap: 18px;
     justify-items: center;
@@ -16,7 +16,7 @@
 
 @media screen and (max-width: 768px) {
   .profile {
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%;
     grid-template-rows: auto;
     row-gap: 0;
     justify-items: center;
